fix: Fixed some cors issues